Fix wrapping of menu links on slide

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -68,13 +68,13 @@ section {
 /*  NAVIGATION MENU    */
 
 nav {
-    width: 0; /* 0 width - change this with JavaScript */
+    width: 100%;
     height: 4em;
 
     position: fixed;
     z-index: 1; 
     top: 0;
-    left: 0;
+    right: 200%;
     overflow-x: hidden;
 
     display: flex;
@@ -91,7 +91,7 @@ nav {
         flex-flow: row wrap;
         justify-content: space-around;
 
-        margin-left: 0.5sem;
+        margin-left: 0.5em;
 
         li {
             margin: 0.5em;
@@ -108,6 +108,9 @@ nav {
     }
 }
 
+.nav-show {
+    transform: translateX(200%);
+}
 
 .hamburger {
     position: fixed;
